--- a/matrix/external/bluez/bluez-5.65/Makefile.tools
+++ b/matrix/external/bluez/bluez-5.65/Makefile.tools
@@ -358,6 +358,7 @@ bin_PROGRAMS +=  tools/mesh-cfgclient
 tools_mesh_cfgclient_SOURCES = tools/mesh-cfgclient.c \
 				tools/mesh/model.h tools/mesh/config-model.h \
 				tools/mesh/cfgcli.h tools/mesh/cfgcli.c \
+				tools/mesh/generic-onoff.h tools/mesh/generic-onoff.c \
 				tools/mesh/keys.h tools/mesh/keys.c \
 				tools/mesh/util.h tools/mesh/util.c \
 				tools/mesh/remote.h tools/mesh/remote.c \
